# ucloth

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  build_prj.bat
src/: CMakeLists.txt
src/c_api/: CMakeLists.txt  ucloth_export.h  ucloth_handles.h  ucloth_interface.cpp  ucloth_interface.h  ucloth_structures.h
src/simulation/: CMakeLists.txt  collision.cpp  collision.h  constraint.cpp  constraint.h  pbdsystem.cpp  pbdsystem.h  uclothcommon.h  world.cpp  world.h
src/umath/: CMakeLists.txt  umath.cpp  umath.h
test/: CMakeLists.txt
test/c_api_test/: CMakeLists.txt  main.cpp
test/simulation_test/: CMakeLists.txt  collision_test.cpp  constraint_test.cpp  main.cpp  pbdsystem_test.cpp  world_test.cpp
